[package]
name = "jumpswap"
version = "0.1.0"
edition = "2021"
description = "Minimal system tray app that swaps Enter and Spacebar keys for gaming"
license = "MIT"

[dependencies.windows]
version = "0.61"
features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Registry",
]
